--- a/Funciones.vcxproj
+++ b/Funciones.vcxproj
@@ -179,6 +179,9 @@
   <ItemGroup>
     <ClInclude Include="Funciones.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
