--- a/Funciones.vcxproj.filters
+++ b/Funciones.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Main</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md" />
+  </ItemGroup>
 </Project>
